<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/day_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:textAppearance="@style/MaterialAlertDialog.Material3.Title.Text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        tools:text="@string/day_title" />

    <TextView
        android:id="@+id/event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/event"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_title"
        tools:text="@string/event" />

    <TextView
        android:id="@+id/event2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="148dp"
        android:text="@string/event_time"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_title"
        tools:text="@string/event_time" />

    <TextView
        android:id="@+id/event3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="216dp"
        android:text="@string/event_data"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_title"
        tools:text="@string/event_data" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_title"
        app:srcCompat="@drawable/cheerful" />

    <EditText
        android:id="@+id/vdata"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/event3"
        app:layout_constraintTop_toBottomOf="@+id/vtime"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/vtime"
        android:layout_width="182dp"
        android:layout_height="46dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/event2"
        app:layout_constraintTop_toBottomOf="@+id/vtitle"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/vtitle"
        android:layout_width="243dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="238dp"
        android:layout_height="54dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="13dp"
        android:background="@color/ratingBarColor"
        android:isIndicator="false"
        android:progressTint="@color/colorAccent"
        android:rating="0"
        android:stepSize="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vdata" />

    <EditText
        android:id="@+id/post"
        android:layout_width="117dp"
        android:layout_height="46dp"
        android:layout_marginStart="276dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:text="@string/ps" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="97dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/rbgood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/good"
            tools:text="@string/good" />

        <RadioButton
            android:id="@+id/rbbad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/bad"
            tools:text="@string/bad" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="68dp"
        android:layout_height="41dp"
        android:layout_marginStart="304dp"
        android:layout_marginTop="2dp"
        android:text="@string/save"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post"
        app:layout_constraintVertical_bias="0.521"
        tools:text="@string/save" />

</androidx.constraintlayout.widget.ConstraintLayout>